--- a/css/sal.css
+++ b/css/sal.css
@@ -1,6 +1,7 @@
 .sal-section {
 	padding-top: 85px;
 	padding-bottom: 100px;
+	margin-left: 70px;
 }
 
 .sal-section__title {
@@ -9,12 +10,14 @@
 	text-transform: uppercase;
 	text-align: center;
 	margin: 0;
-	margin-bottom: 60px;
+	margin-bottom: 40px;
 }
 
 .sal-section__paragraph {
-	font-size: 70px;
+	font-size: 35px;
 	font-weight: 700;
+	color: #fff;
+	text-shadow: 3px 3px 3px #000;
 	text-transform: uppercase;
 	text-align: center;
 	margin: 0;
@@ -22,9 +25,9 @@
 
 .sal-section__li {
 	display: inline-block;
-	width: 580px;
+	width: 550px;
 	height: 350px;
-	padding-top: 135px;
+	padding-top: 160px;
 }
 
 .sal-section__li:not(:nth-child(2n)) {
@@ -36,26 +39,26 @@
 }
 
 .vibe {
-	background-image: url('../img/vibes.jpg');
-	background-size: 580px 350px;
+	background-image: url('../img/english.jpg');
+	background-size: 550px 350px;
 	transition-duration: 1s;
 }
 
 .war {
-	background-image: url('../img/star_wars.jpg');
-	background-size: 580px 350px;
+	background-image: url('../img/chinese.jpg');
+	background-size: 550px 350px;
 	transition-duration: 1s;
 }
 
 .west {
-	background-image: url('../img/wild_west.jpg');
-	background-size: 580px 350px;
+	background-image: url('../img/hw.jpg');
+	background-size: 550px 350px;
 	transition-duration: 1s;
 }
 
 .neon {
-	background-image: url('../img/neon_style.jpg');
-	background-size: 580px 350px;
+	background-image: url('../img/pre-school.jpg');
+	background-size: 550px 350px;
 	transition-duration: 1s;
 }
 
