--- a/css/var.css
+++ b/css/var.css
@@ -1,6 +1,6 @@
 :root {
-	--main-color: #CD06FF;
-	--second-color: #6C0287;
+	--main-color: #e0864e;
+	--second-color: #ef8134;
 	--third-color: #640AA3;
-	--bg-color: #1b1a1b;
+	--bg-color: #fff;
 }
