--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-	background: linear-gradient(180deg, #1B1A1B 0%, #370A37 100%);
+	background: linear-gradient(180deg, #fff 0%, #e0864e 100%);
 }
 
 .footer-section__title {
