--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 @import 'eng.css';
 @import 'cn.css';
 @import 'cont.css';
+@import 'other.css';
+@import 'button.css';
 
 html {
   position: relative;
