--- a/css/header.css
+++ b/css/header.css
@@ -55,7 +55,7 @@
 
 .menu-section__button:active {
 	background-color: var(--third-color);
-	border: 1px solid #000;
+	border: 3px solid var(--third-color);
 }
 
 
